<package>
  <name>catkinize_this</name>
  <version>0.1.0</version>
  <description>catkinize_this</description>
  <!-- <maintainer>David!!</maintainer> -->

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/catkinize_this</url>
  <!-- <url type="bugtracker"></url> -->

  <author>David!!</author>

  <!-- <build_depend>rospy</build_depend> -->
  <!-- <build_depend>rospack</build_depend> -->
  <!-- <run_depend>rospy</run_depend> -->
  <!-- <run_depend>rospack</run_depend> -->
  <!-- <test_depend>rospy</test_depend> -->
  <!-- <test_depend>rospack</test_depend> -->

  <export>

  </export>
</package>