<package>
  <name>catkinize_this</name>
  <version>0.1.0</version>
  <description>catkinize_this</description>

  <author>David V. Lu!!</author>
  <maintainer email="davidvlu@gmail.com">David V. Lu!!</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/catkinize_this</url>
  <!-- <url type="bugtracker"></url> -->

  <run_depend>rospy</run_depend>
  <run_depend>rospack</run_depend>
  <buildtool_depend>catkin</buildtool_depend>

</package>
