<package>
  <name>easy_markers</name>
  <version>0.1.0</version>
  <description>A library to assist in publishing markers easily in Python</description>
  <!-- <maintainer>David V. Lu!!</maintainer> -->

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/easy_markers</url>
  <!-- <url type="bugtracker"></url> -->

  <author>David V. Lu!!</author>

  <!-- <build_depend>rospy</build_depend> -->
  <!-- <build_depend>visualization_msgs</build_depend> -->
  <!-- <build_depend>geometry_msgs</build_depend> -->
  <!-- <build_depend>tf</build_depend> -->
  <!-- <build_depend>interactive_markers</build_depend> -->
  <!-- <run_depend>rospy</run_depend> -->
  <!-- <run_depend>visualization_msgs</run_depend> -->
  <!-- <run_depend>geometry_msgs</run_depend> -->
  <!-- <run_depend>tf</run_depend> -->
  <!-- <run_depend>interactive_markers</run_depend> -->
  <!-- <test_depend>rospy</test_depend> -->
  <!-- <test_depend>visualization_msgs</test_depend> -->
  <!-- <test_depend>geometry_msgs</test_depend> -->
  <!-- <test_depend>tf</test_depend> -->
  <!-- <test_depend>interactive_markers</test_depend> -->

  <export>

  </export>
</package>