<package>
  <name>generic_dashboard</name>
  <version>0.1.0</version>
  <description>A library for creating PR2 or Turtlebot-like Dashboards for other types of robots.</description>
  <!-- <maintainer>David V. Lu!!</maintainer> -->

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/generic_dashboard</url>
  <!-- <url type="bugtracker"></url> -->

  <author>David V. Lu!!</author>

  <!-- <build_depend>rxtools</build_depend> -->
  <!-- <build_depend>robot_monitor</build_depend> -->
  <!-- <build_depend>std_msgs</build_depend> -->
  <!-- <build_depend>std_srvs</build_depend> -->
  <!-- <build_depend>rospy</build_depend> -->
  <!-- <build_depend>roslib</build_depend> -->
  <!-- <run_depend>rxtools</run_depend> -->
  <!-- <run_depend>robot_monitor</run_depend> -->
  <!-- <run_depend>std_msgs</run_depend> -->
  <!-- <run_depend>std_srvs</run_depend> -->
  <!-- <run_depend>rospy</run_depend> -->
  <!-- <run_depend>roslib</run_depend> -->
  <!-- <test_depend>rxtools</test_depend> -->
  <!-- <test_depend>robot_monitor</test_depend> -->
  <!-- <test_depend>std_msgs</test_depend> -->
  <!-- <test_depend>std_srvs</test_depend> -->
  <!-- <test_depend>rospy</test_depend> -->
  <!-- <test_depend>roslib</test_depend> -->

  <export>

  </export>
</package>