<package>
  <name>joy_listener</name>
  <version>0.1.3</version>
  <description>joy_listener</description>
  <maintainer email="">David!!</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/joy_listener</url>
  <!-- <url type="bugtracker"></url> -->

  <author>David!!</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>rospy</test_depend> -->
  <!-- <test_depend>sensor_msgs</test_depend> -->

</package>
