<package>
  <name>manifest_cleaner</name>
  <version>0.1.0</version>
  <description>Tool for examining package and stack manifests. Currently only can output statistics, doesn't actually clean.</description>
  <!-- <maintainer>David V. Lu!!</maintainer> -->

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/manifest_cleaner</url>
  <!-- <url type="bugtracker"></url> -->

  <author>David V. Lu!!</author>

  <!-- <build_depend>rospy</build_depend> -->
  <!-- <build_depend>rospack</build_depend> -->
  <!-- <run_depend>rospy</run_depend> -->
  <!-- <run_depend>rospack</run_depend> -->
  <!-- <test_depend>rospy</test_depend> -->
  <!-- <test_depend>rospack</test_depend> -->

  <export>

  </export>
</package>