<package>
  <name>rosbaglive</name>
  <version>0.1.0</version>
  <description>Tool for playing rosbags as though they were happening NOW.</description>
  <!-- <maintainer>David V. Lu!!</maintainer> -->

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/rosbaglive</url>
  <!-- <url type="bugtracker"></url> -->

  <author>David V. Lu!!</author>

  <!-- <build_depend>rospy</build_depend> -->
  <!-- <build_depend>rosbag</build_depend> -->
  <!-- <run_depend>rospy</run_depend> -->
  <!-- <run_depend>rosbag</run_depend> -->
  <!-- <test_depend>rospy</test_depend> -->
  <!-- <test_depend>rosbag</test_depend> -->

  <export>

  </export>
</package>