<package>
  <name>rxgraphplus</name>
  <version>0.1.0</version>
  <description>rxgraph is a command-line tool for visualizing a ROS computation graph. The rxgraph is a new package in ROS 1.1 that provides an updated version of the rxgraph tool that was originally distributed in the rosgraph package.

     This forked version allows for grouping nodes into clusters.</description>
  <!-- <maintainer>Ken Conley and David V. Lu!!</maintainer> -->

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/rxgraphplus</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Ken Conley and David V. Lu!!</author>

  <!-- <build_depend>rosgraph</build_depend> -->
  <!-- <build_depend>xdot</build_depend> -->
  <!-- <build_depend>roslib</build_depend> -->
  <!-- <build_depend>rostopic</build_depend> -->
  <!-- <build_depend>rosnode</build_depend> -->
  <!-- <run_depend>rosgraph</run_depend> -->
  <!-- <run_depend>xdot</run_depend> -->
  <!-- <run_depend>roslib</run_depend> -->
  <!-- <run_depend>rostopic</run_depend> -->
  <!-- <run_depend>rosnode</run_depend> -->
  <!-- <test_depend>rosgraph</test_depend> -->
  <!-- <test_depend>xdot</test_depend> -->
  <!-- <test_depend>roslib</test_depend> -->
  <!-- <test_depend>rostopic</test_depend> -->
  <!-- <test_depend>rosnode</test_depend> -->

  <export>

  </export>
</package>